--- a/SolutionInspector/SolutionInspector.csproj
+++ b/SolutionInspector/SolutionInspector.csproj
@@ -168,5 +168,8 @@
     <Compile Include="Settings\ProjectSettings.cs" />
     <Compile Include="Settings\SolutionSettings.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="package.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
